[package]
name = "Ubnfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "4.0.0"
async-graphql-actix-web = "4.0.0"
actix-web = { version = "4.1.0", default-features = false, features = ["macros"] }
serde_json = "1.0"
serde = "1.0"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls","postgres","uuid" ] }